--- a/views/enter.ejs
+++ b/views/enter.ejs
@@ -49,7 +49,7 @@
 <% var j=0; %>
 <h2>Luni</h2>
 <% item1.forEach(function(i) { %>
-        <label class="checlbocx-inline" > <input type="checkbox" onclick="c(this);" value="1" data-start = "<%= i.ziua %>:<%= i.start %>" data-end="<%= i.ziua %>:<%= i.end %>" > <%= i.nume %> </label>
+        <label class="checlbocx-inline" > <input type="checkbox" onclick="c(this);" value="<%= i.nume %>" data-start = "<%= i.ziua %>:<%= i.start %>" data-end="<%= i.ziua %>:<%= i.end %>" name = "<%= j %>" > <%= i.nume %> </label>
         <button type="button" class="btn btn-info" data-toggle="popover" title="Info" data-content="<%= i.info %>">Info</button> <br>
         <div>Numar locuri:<div id="choice<%= j %>"><%= i.nr %></div></div>
         <br>
@@ -58,7 +58,7 @@
 
 <h2>Marti</h2>
 <% item2.forEach(function(i) { %>
-        <label class="checlbocx-inline" > <input type="checkbox" onclick="c(this);" value="1" data-start = "<%= i.ziua %>:<%= i.start %>" data-end="<%= i.ziua %>:<%= i.end %>" > <%= i.nume %> </label>
+        <label class="checlbocx-inline" > <input type="checkbox" onclick="c(this);" value="<%= i.nume %>" data-start = "<%= i.ziua %>:<%= i.start %>" data-end="<%= i.ziua %>:<%= i.end %>" name = "<%= j %>" > <%= i.nume %> </label>
         <button type="button" class="btn btn-info" data-toggle="popover" title="Info" data-content="<%= i.info %>">Info</button> <br>
         <div>Numar locuri:<div id="choice<%= j %>"><%= i.nr %></div></div>
         <br>
@@ -67,7 +67,7 @@
 
 <h2>Miercuri</h2>
 <% item3.forEach(function(i) { %>
-        <label class="checlbocx-inline" > <input type="checkbox" onclick="c(this);" value="1" data-start = "<%= i.ziua %>:<%= i.start %>" data-end="<%= i.ziua %>:<%= i.end %>" > <%= i.nume %> </label>
+        <label class="checlbocx-inline" > <input type="checkbox" onclick="c(this);" value="<%= i.nume %>" data-start = "<%= i.ziua %>:<%= i.start %>" data-end="<%= i.ziua %>:<%= i.end %>" name = "<%= j %>" > <%= i.nume %> </label>
         <button type="button" class="btn btn-info" data-toggle="popover" title="Info" data-content="<%= i.info %>">Info</button> <br>
         <div>Numar locuri:<div id="choice<%= j %>"><%= i.nr %></div></div>
         <br>
@@ -76,7 +76,7 @@
 
 <h2>Joi</h2>
 <% item4.forEach(function(i) { %>
-        <label class="checlbocx-inline" > <input type="checkbox" onclick="c(this);" value="1" data-start = "<%= i.ziua %>:<%= i.start %>" data-end="<%= i.ziua %>:<%= i.end %>" > <%= i.nume %> </label>
+        <label class="checlbocx-inline" > <input type="checkbox" onclick="c(this);" value="<%= i.nume %>" data-start = "<%= i.ziua %>:<%= i.start %>" data-end="<%= i.ziua %>:<%= i.end %>" name = "<%= j %>"> <%= i.nume %> </label>
         <button type="button" class="btn btn-info" data-toggle="popover" title="Info" data-content="<%= i.info %>">Info</button> <br>
         <div>Numar locuri:<div id="choice<%= j %>"><%= i.nr %></div></div>
         <br>
@@ -85,13 +85,14 @@
 
 <h2>Vineri</h2>
 <% item5.forEach(function(i) { %>
-        <label class="checlbocx-inline" > <input type="checkbox" onclick="c(this);" value="1" data-start = "<%= i.ziua %>:<%= i.start %>" data-end="<%= i.ziua %>:<%= i.end %>" > <%= i.nume %> </label>
+        <label class="checlbocx-inline" > <input type="checkbox" onclick="c(this);" value="<%= i.nume %>" data-start = "<%= i.ziua %>:<%= i.start %>" data-end="<%= i.ziua %>:<%= i.end %>" name = "<%= j %>" > <%= i.nume %> </label>
         <button type="button" class="btn btn-info" data-toggle="popover" title="Info" data-content="<%= i.info %>">Info</button> <br>
         <div>Numar locuri:<div id="choice<%= j %>"><%= i.nr %></div></div>
         <br>
         <% j++ %>
 <% }); %>
 <br>
+<input name="user[heh]" value= "<%= j %>" type="hidden">
   <button type="submit" class="btn btn-default">Submit</button>
 </form>
 <br>
@@ -101,73 +102,6 @@
 
 
 <script>
-/*
-My first try :P Ill let this here just because I like to see the progress
-
-var mins = 0;
-
-function dangher(){
-        $("#msg").removeClass().addClass("alert alert-danger");
-        $('#msg').html("Doua sau mai multe intervale de timp se suprapun").show();
-}
-
-function noDangher(){
-  if(mins >= 60 * document.getElementById('nr').value)
-  {
-        $("#msg").removeClass().addClass("alert alert-success");
-        $('#msg').html("Ai destule ore :D").show();
-  }
-  else {
-      $("#msg").removeClass().addClass("alert alert-info");
-      $('#msg').html("Mai ai nevoie de " +  String(document.getElementById('nr').value - (mins/60)) + " ore" ).show();
-  }
-}
-
-
-var act = [];
-
-function stringToMins(String) {
-var a = String.split(':');
-return (+a[0]) * 3600  + (+a[1]) * 60 + (+a[1]); 
-}
-
-function arraysEqual(arr1, arr2) {
-    if(arr1.length !== arr2.length)
-        return false;
-    for(var i = arr1.length; i--;) {
-        if(arr1[i] !== arr2[i])
-            return false;
-    }
-
-    return true;
-}
-
-function c(obj) {
-  if(obj.checked){
-    act.push([stringToMins(obj.dataset.start) , stringToMins(obj.dataset.end)]);
-  }
-  else {
-    act.splice(act.indexOf([stringToMins(obj.dataset.start) , stringToMins(obj.dataset.end)]), 1);
-  }
-  for(let sub of act){
-    if (stringToMins(obj.dataset.start) !== sub[0]){
-    if (Math.max( stringToMins(obj.dataset.start) , sub[0] ) > Math.min( stringToMins(obj.dataset.end) , sub[1] ))
-    {
-      console.log(sub[0]);
-      var ok = 1;
-    }
-    else { 
-      console.log("nay");
-      var ok = 0;
-      dangher();
-      return 0;
-      } 
-  }}
-   if (ok) { console.log("yay");
-            noDangher(); }
-
-}
-*/
 
 let intervals = [];
 let mins = 0;
